<resources>
    <string name="app_name">Submission Akhir Jetpack</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>

    <string name="upcoming">Upcoming</string>
    <string name="news">News</string>
    <string name="video">Video</string>
    <string name="symbol2d">:</string>
    <string name="adult">Adult</string>
    <string name="original_title">Original Title</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="reviewers_example"> reviewers</string>
    <string name="language">Language</string>
    <string name="popularity_example">169.182</string>
    <string name="rate_example">8.1</string>
    <string name="max_rate_example">/10</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="title_example">Murder On The Orient Express</string>
    <string name="date_example">2019-07-26</string>
    <string name="language_example">EN</string>
    <string name="detail_cd_backdrop_image">Backdrop Image</string>
    <string name="detail_cd_posterpath">Posterpath</string>
    <string name="botnav_favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_bookmark">save</string>
    <string name="image_backdrop">Image Backdrop</string>
</resources>
