<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_detail_motion_scene"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/image_detail_backdrop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/s"
        app:layout_constraintBottom_toTopOf="@id/constraint_detail_item_container2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/detail_cd_backdrop_image" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_detail_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_background"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/constraint_detail_item_container2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_detail_title_item"
            style="@style/CustomText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_example"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/text_detail_date_item"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_detail_date_item"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/checkbox_detail_bookmark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:button="@drawable/bookmark_selector"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_detail_item_container2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6A6A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_detail_parent_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_detail_popularity_value"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity_example"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/CustomText.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity"
                    app:layout_constraintEnd_toEndOf="@id/text_detail_popularity_value"
                    app:layout_constraintStart_toStartOf="@id/text_detail_popularity_value"
                    app:layout_constraintTop_toBottomOf="@id/text_detail_popularity_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/view_detail_rate_star"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_star_red_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linear_detail_childrate_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@id/view_detail_rate_star"
                    app:layout_constraintStart_toStartOf="@id/view_detail_rate_star"
                    app:layout_constraintTop_toBottomOf="@id/view_detail_rate_star">

                    <TextView
                        android:id="@+id/text_detail_rate_value"
                        style="@style/CustomText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_example"
                        android:textSize="18sp" />

                    <TextView
                        style="@style/CustomText.Grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_rate_example" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_detail_reviewers"
                    style="@style/CustomText.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviewers_example"
                    app:layout_constraintEnd_toEndOf="@id/linear_detail_childrate_container"
                    app:layout_constraintStart_toStartOf="@id/linear_detail_childrate_container"
                    app:layout_constraintTop_toBottomOf="@id/linear_detail_childrate_container" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_detail_language"
                    style="@style/CustomText"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:text="@string/language_example"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/CustomText.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    app:layout_constraintEnd_toEndOf="@id/text_detail_language"
                    app:layout_constraintStart_toStartOf="@id/text_detail_language"
                    app:layout_constraintTop_toBottomOf="@id/text_detail_language" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_detail_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6A6A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_detail_parent_container" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_detail_image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_detail_line2">

            <ImageView
                android:id="@+id/image_detail_poster"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/s"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/detail_cd_posterpath" />

            <TextView
                android:id="@+id/text_detail_title_original"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="2dp"
                android:text="@string/original_title"
                app:layout_constraintStart_toEndOf="@id/image_detail_poster"
                app:layout_constraintTop_toTopOf="@id/image_detail_poster" />

            <TextView
                android:id="@+id/text_detail_double_dot1"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/symbol2d"
                app:layout_constraintStart_toEndOf="@id/text_detail_title_original"
                app:layout_constraintTop_toTopOf="@id/text_detail_title_original" />

            <TextView
                android:id="@+id/text_detail_original_title"
                style="@style/CustomText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Solo Leveling"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_detail_double_dot1"
                app:layout_constraintTop_toTopOf="@id/text_detail_title_original" />

            <TextView
                android:id="@+id/text_detail_title_nonoriginal"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="@id/text_detail_title_original"
                app:layout_constraintTop_toBottomOf="@id/text_detail_original_title" />

            <TextView
                android:id="@+id/text_detail_double_dot2"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/symbol2d"
                app:layout_constraintStart_toStartOf="@id/text_detail_double_dot1"
                app:layout_constraintTop_toTopOf="@id/text_detail_title_nonoriginal" />

            <TextView
                android:id="@+id/text_detail_title"
                style="@style/CustomText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Solo Leveling"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_detail_original_title"
                app:layout_constraintTop_toTopOf="@id/text_detail_double_dot2" />

            <TextView
                android:id="@+id/text_detail_title_adult"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/adult"
                app:layout_constraintStart_toStartOf="@id/text_detail_title_original"
                app:layout_constraintTop_toBottomOf="@id/text_detail_title" />

            <TextView
                android:id="@+id/text_detail_double_dot3"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/symbol2d"
                app:layout_constraintStart_toStartOf="@id/text_detail_double_dot2"
                app:layout_constraintTop_toTopOf="@id/text_detail_title_adult" />

            <TextView
                android:id="@+id/text_detail_adult"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                app:layout_constraintStart_toStartOf="@id/text_detail_original_title"
                app:layout_constraintTop_toTopOf="@id/text_detail_double_dot3" />

            <TextView
                android:id="@+id/text_detail_title_video"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/video"
                app:layout_constraintStart_toStartOf="@id/text_detail_title_adult"
                app:layout_constraintTop_toBottomOf="@id/text_detail_title_adult" />

            <TextView
                android:id="@+id/text_detail_double_dot4"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/symbol2d"
                app:layout_constraintStart_toStartOf="@id/text_detail_double_dot3"
                app:layout_constraintTop_toBottomOf="@id/text_detail_double_dot3" />

            <TextView
                android:id="@+id/text_detail_video"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                app:layout_constraintStart_toStartOf="@id/text_detail_adult"
                app:layout_constraintTop_toBottomOf="@id/text_detail_adult" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_detail_line3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6A6A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_detail_image_container" />

        <TextView
            android:id="@+id/text_detail_overview"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_detail_line3" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_detail_overview"
            app:layout_constraintTop_toBottomOf="@id/text_detail_overview">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_detail_overview_item"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/coming_soon" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>