<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/s"
        app:layout_constraintBottom_toTopOf="@id/constraint_detail_item_container2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_backdrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_background"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/constraint_detail_item_container2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_detail_title_item"
            style="@style/CustomText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/text_detail_date_item"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Murder On The Orient Express" />

        <TextView
            android:id="@+id/text_detail_date_item"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="2019-07-26" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/checkbox_detail_bookmark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:button="@drawable/bookmark_selector"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_detail_item_container2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6A6A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_detail_parent_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/text_detail_popularity_value"
                    style="@style/CustomText"
                    tools:text="169.182"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    app:layout_constraintTop_toBottomOf="@id/text_detail_popularity_value"
                    app:layout_constraintStart_toStartOf="@id/text_detail_popularity_value"
                    app:layout_constraintEnd_toEndOf="@id/text_detail_popularity_value"
                    style="@style/CustomText.Grey"
                    tools:text="Popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/view_detail_rate_star"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_star_red_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linear_detail_childrate_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@id/view_detail_rate_star"
                    app:layout_constraintStart_toStartOf="@id/view_detail_rate_star"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_detail_rate_value"
                        style="@style/CustomText.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        tools:text="8.1" />

                    <TextView
                        style="@style/CustomText.Grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="/10" />
                </LinearLayout>

                <TextView
                    style="@style/CustomText.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="@id/linear_detail_childrate_container"
                    app:layout_constraintStart_toStartOf="@id/linear_detail_childrate_container"
                    app:layout_constraintTop_toBottomOf="@id/view_detail_rate_star"
                    tools:text="100 reviewers" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/CustomText"
                    tools:text="EN"
                    android:id="@+id/text_detail_language"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/CustomText.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/text_detail_language"
                    app:layout_constraintStart_toStartOf="@id/text_detail_language"
                    app:layout_constraintTop_toBottomOf="@id/text_detail_language"
                    tools:text="Language" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_detail_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6A6A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_detail_parent_container" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_detail_image_container"
            app:layout_constraintTop_toBottomOf="@id/view_detail_line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_detail_poster"
                tools:src="@drawable/s"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="TODO" />

            <TableLayout
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_detail_poster"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@id/image_detail_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView android:text="@string/original_title"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView android:text="@string/symbol2d"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView
                        android:id="@+id/text_detail_original_title"
                        android:text="Solo Leveling"
                        style="@style/CustomText"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/title"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView android:text="@string/symbol2d"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView
                        android:id="@+id/text_detail_title"
                        android:text="Solo Leveling"
                        style="@style/CustomText"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/adult"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView android:text="@string/symbol2d"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView
                        android:id="@+id/text_detail_adult"
                        android:text="No"
                        style="@style/CustomText"/>
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/video"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView android:text="@string/symbol2d"
                        android:layout_marginEnd="2dp"
                        style="@style/CustomText"/>
                    <TextView
                        android:id="@+id/text_detail_video"
                        android:text="No"
                        style="@style/CustomText"/>
                </TableRow>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_detail_line3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#6A6A6A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_detail_image_container" />

        <TextView
            android:id="@+id/text_detail_overview"
            style="@style/CustomText"
            app:layout_constraintTop_toBottomOf="@id/view_detail_line3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/overview"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ScrollView
            app:layout_constraintStart_toStartOf="@id/text_detail_overview"
            app:layout_constraintTop_toBottomOf="@id/text_detail_overview"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_detail_overview_item"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/coming_soon"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>